--- a/app/src/main/res/layout/activity_fire.xml
+++ b/app/src/main/res/layout/activity_fire.xml
@@ -4,34 +4,47 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/ui"
     tools:context=".fire">
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:textSize="40dp"
-    android:gravity="center_horizontal"
-    android:text="Is It Life Threatening"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginTop="56dp"
+        android:gravity="center_horizontal"
+        android:text="Is It Life Threatening"
+        android:textSize="40sp"
+        android:textAllCaps="true"
+        android:textColor="@android:color/black"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="16dp" />
 
     <Button
         android:layout_width="200dp"
         android:layout_height="100dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:text="Yes"
+        android:layout_marginStart="104dp"
+        android:layout_marginLeft="104dp"
+        android:background="@drawable/custom_button"
         android:onClick="yes1"
+        android:text="Yes"
+        android:textSize="30sp"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.158" />
+        app:layout_constraintVertical_bias="0.304" />
 
     <Button
         android:layout_width="200dp"
         android:layout_height="100dp"
-        android:layout_marginBottom="404dp"
-        android:text="No"
+        android:layout_marginBottom="292dp"
+        android:background="@drawable/custom_button"
+        android:textSize="30sp"
+        android:textColor="@android:color/white"
         android:onClick="no1"
+        android:text="No"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.075"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
