--- a/app/src/main/res/layout/activity_screen4.xml
+++ b/app/src/main/res/layout/activity_screen4.xml
@@ -4,33 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/ui"
     tools:context=".Screen4">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:textSize="40dp"
+        android:layout_marginTop="56dp"
         android:gravity="center_horizontal"
-        android:text="Is the person bleeding"/>
+        android:text="is the person bleeding?"
+        android:textSize="40dp"
+        android:textAllCaps="true"
+        android:textColor="@android:color/black"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:layout_width="200dp"
         android:layout_height="100dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="104dp"
+        android:layout_marginLeft="104dp"
         android:text="Yes"
+        android:textSize="30sp"
         android:onClick="yes4"
+        android:background="@drawable/custom_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.158" />
+        app:layout_constraintVertical_bias="0.304"  />
 
     <Button
         android:layout_width="200dp"
         android:layout_height="100dp"
-        android:layout_marginBottom="404dp"
+        android:layout_marginBottom="292dp"
         android:text="No"
+        android:textSize="30sp"
+        android:background="@drawable/custom_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.075"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
