--- a/app/src/main/res/layout/activity_final_f2.xml
+++ b/app/src/main/res/layout/activity_final_f2.xml
@@ -4,15 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FinalF">
-
+    tools:context=".FinalF2">
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="50dp"
         android:gravity="center_horizontal"
-        android:text="Criticality 1"
+        android:text="Criticality 2"
         android:textSize="30dp" />
 
     <TextView
@@ -26,4 +25,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
