--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,11 @@
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="90dp"
         android:onClick="fire"
-        android:text="Fire"
+        android:text="Helper"
+        android:textFontWeight="@android:integer/config_mediumAnimTime"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.135"
@@ -18,21 +20,14 @@
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:onClick="EarthQuake"
-        android:text="EarthQuake"
+        android:layout_height="80dp"
+        android:layout_marginTop="250dp"
+        android:onClick="Victim"
+        android:text="Victim"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.338"
         tools:layout_editor_absoluteX="0dp" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:onClick="Tsunami"
-        android:text="Tsunami"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="-35dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
