--- a/app/src/main/res/layout/activity_screen6.xml
+++ b/app/src/main/res/layout/activity_screen6.xml
@@ -5,16 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/ui"
-    tools:context=".Screen3f">
+    tools:context=".Screen6">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_marginTop="56dp"
         android:gravity="center_horizontal"
-        android:text="Can The Person Talk?"
+        android:text="Is Patient Disoriented?"
         android:textSize="40dp"
-        android:textAllCaps="true"
         android:textColor="@android:color/black"
+        android:textAllCaps="true"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
@@ -24,7 +24,7 @@
         android:layout_marginLeft="104dp"
         android:text="Yes"
         android:textSize="30sp"
-        android:onClick="yes3"
+        android:onClick="yes6"
         android:background="@drawable/custom_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,11 +36,14 @@
         android:layout_height="100dp"
         android:layout_marginBottom="292dp"
         android:text="No"
-        android:onClick="no3"
+        android:onClick="no6"
         android:textSize="30sp"
         android:background="@drawable/custom_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="OnClick" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
