--- a/app/src/main/res/layout/activity_victim_3.xml
+++ b/app/src/main/res/layout/activity_victim_3.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/ui"
-    tools:context=".Screen3f">
+    tools:context=".Victim_3">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="100dp"
@@ -24,7 +24,7 @@
         android:layout_marginLeft="104dp"
         android:text="Yes"
         android:textSize="30sp"
-        android:onClick="yes3"
+        android:onClick="vyes3"
         android:background="@drawable/custom_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,11 +36,11 @@
         android:layout_height="100dp"
         android:layout_marginBottom="292dp"
         android:text="No"
-        android:onClick="no3"
         android:textSize="30sp"
         android:background="@drawable/custom_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
