--- a/app/src/main/res/layout/activity_victim_4.xml
+++ b/app/src/main/res/layout/activity_victim_4.xml
@@ -3,15 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:background="@drawable/ui"
-    tools:context=".Screen3f">
+    android:layout_height="match_parent"
+    tools:context=".Victim_4">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_marginTop="56dp"
         android:gravity="center_horizontal"
-        android:text="Can The Person Talk?"
+        android:text="is the person bleeding?"
         android:textSize="40dp"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
@@ -24,7 +24,7 @@
         android:layout_marginLeft="104dp"
         android:text="Yes"
         android:textSize="30sp"
-        android:onClick="yes3"
+        android:onClick="vyes4"
         android:background="@drawable/custom_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,11 +36,11 @@
         android:layout_height="100dp"
         android:layout_marginBottom="292dp"
         android:text="No"
-        android:onClick="no3"
         android:textSize="30sp"
         android:background="@drawable/custom_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
