--- a/app/src/main/res/layout/activity_victim_5.xml
+++ b/app/src/main/res/layout/activity_victim_5.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/ui"
-    tools:context=".Screen3f">
+    tools:context=".Victim_5">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_marginTop="56dp"
         android:gravity="center_horizontal"
-        android:text="Can The Person Talk?"
-        android:textSize="40dp"
+        android:text="Does the person experience severe pain?"
+        android:textSize="30dp"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,7 +24,7 @@
         android:layout_marginLeft="104dp"
         android:text="Yes"
         android:textSize="30sp"
-        android:onClick="yes3"
+        android:onClick="vyes5"
         android:background="@drawable/custom_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +36,6 @@
         android:layout_height="100dp"
         android:layout_marginBottom="292dp"
         android:text="No"
-        android:onClick="no3"
         android:textSize="30sp"
         android:background="@drawable/custom_button"
         app:layout_constraintBottom_toBottomOf="parent"
