--- a/app/src/main/res/layout/activity_fire.xml
+++ b/app/src/main/res/layout/activity_fire.xml
@@ -8,28 +8,29 @@
     tools:context=".fire">
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_marginTop="56dp"
         android:gravity="center_horizontal"
         android:text="Is It Life Threatening?"
-        android:textSize="40sp"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
+        android:textSize="40sp"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="16dp" />
 
     <Button
+        android:id="@+id/button"
         android:layout_width="200dp"
         android:layout_height="100dp"
-        android:layout_marginStart="104dp"
-        android:layout_marginLeft="104dp"
         android:background="@drawable/custom_button"
         android:onClick="yes1"
         android:text="Yes"
+        android:textColor="@android:color/black"
         android:textSize="30sp"
-        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.304" />
@@ -37,14 +38,14 @@
     <Button
         android:layout_width="200dp"
         android:layout_height="100dp"
-        android:layout_marginBottom="292dp"
         android:background="@drawable/custom_button"
-        android:textSize="30sp"
-        android:textColor="@android:color/white"
         android:onClick="no1"
         android:text="No"
+        android:textColor="@android:color/black"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
