--- a/app/src/main/res/layout/activity_screen2f.xml
+++ b/app/src/main/res/layout/activity_screen2f.xml
@@ -8,41 +8,43 @@
     tools:context=".Screen2f">
 
     <TextView
+        android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_marginTop="56dp"
         android:gravity="center_horizontal"
         android:text="Is the Patient Conscious?"
-        android:textSize="40dp"
-        android:textColor="@android:color/black"
         android:textAllCaps="true"
+        android:textColor="@android:color/black"
+        android:textSize="40dp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
+        android:id="@+id/button2"
         android:layout_width="200dp"
         android:layout_height="100dp"
-        android:layout_marginStart="104dp"
-        android:layout_marginLeft="104dp"
+        android:background="@drawable/custom_button"
+        android:onClick="yes2"
         android:text="Yes"
         android:textSize="30sp"
-        android:onClick="yes2"
-        android:background="@drawable/custom_button"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.304"  />
+        app:layout_constraintVertical_bias="0.304" />
 
     <Button
         android:layout_width="200dp"
         android:layout_height="100dp"
         android:layout_marginBottom="292dp"
-        android:text="No"
-        android:onClick="no2"
-        android:textSize="30sp"
         android:background="@drawable/custom_button"
+        android:onClick="no2"
+        android:text="No"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button2"
         tools:ignore="OnClick" />
 </androidx.constraintlayout.widget.ConstraintLayout>
