--- a/app/src/main/res/layout/activity_screen5.xml
+++ b/app/src/main/res/layout/activity_screen5.xml
@@ -18,29 +18,30 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
+        android:id="@+id/button5"
         android:layout_width="200dp"
         android:layout_height="100dp"
-        android:layout_marginStart="104dp"
-        android:layout_marginLeft="104dp"
+        android:background="@drawable/custom_button"
+        android:onClick="yes5"
         android:text="Yes"
         android:textSize="30sp"
-        android:onClick="yes5"
-        android:background="@drawable/custom_button"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.304"  />
+        app:layout_constraintVertical_bias="0.304" />
 
     <Button
         android:layout_width="200dp"
         android:layout_height="100dp"
         android:layout_marginBottom="292dp"
-        android:text="No"
-        android:onClick="no5"
-        android:textSize="30sp"
         android:background="@drawable/custom_button"
+        android:onClick="no5"
+        android:text="No"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button5" />
 </androidx.constraintlayout.widget.ConstraintLayout>
