--- a/app/src/main/res/layout/activity_screen6.xml
+++ b/app/src/main/res/layout/activity_screen6.xml
@@ -18,31 +18,32 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
+        android:id="@+id/button6"
         android:layout_width="200dp"
         android:layout_height="100dp"
-        android:layout_marginStart="104dp"
-        android:layout_marginLeft="104dp"
+        android:background="@drawable/custom_button"
+        android:onClick="yes6"
         android:text="Yes"
         android:textSize="30sp"
-        android:onClick="yes6"
-        android:background="@drawable/custom_button"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.304"  />
+        app:layout_constraintVertical_bias="0.304" />
 
     <Button
         android:layout_width="200dp"
         android:layout_height="100dp"
         android:layout_marginBottom="292dp"
-        android:text="No"
-        android:onClick="no6"
-        android:textSize="30sp"
         android:background="@drawable/custom_button"
+        android:onClick="no6"
+        android:text="No"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button6"
         tools:ignore="OnClick" />
 
 
