--- a/app/src/main/res/layout/activity_victim.xml
+++ b/app/src/main/res/layout/activity_victim.xml
@@ -19,16 +19,16 @@
         tools:layout_editor_absoluteX="16dp" />
 
     <Button
+        android:id="@+id/button7"
         android:layout_width="200dp"
         android:layout_height="100dp"
-        android:layout_marginStart="104dp"
-        android:layout_marginLeft="104dp"
         android:background="@drawable/custom_button"
         android:onClick="vyes1"
         android:text="Yes"
-        android:textSize="30sp"
         android:textColor="@android:color/white"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.304" />
@@ -38,14 +38,15 @@
         android:layout_height="100dp"
         android:layout_marginBottom="292dp"
         android:background="@drawable/custom_button"
-        android:textSize="30sp"
-        android:textColor="@android:color/white"
         android:onClick="vno1"
         android:text="No"
+        android:textColor="@android:color/white"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button7"
         tools:ignore="OnClick" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
