--- a/app/src/main/res/layout/activity_victim_6.xml
+++ b/app/src/main/res/layout/activity_victim_6.xml
@@ -5,24 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/ui"
-    tools:context=".Victim_2">
+    tools:context=".Victim_6">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_marginTop="56dp"
         android:gravity="center_horizontal"
-        android:text="Is the Patient Conscious?"
+        android:text="Is Patient Disoriented?"
         android:textSize="40dp"
         android:textColor="@android:color/black"
         android:textAllCaps="true"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/button6"
         android:layout_width="200dp"
         android:layout_height="100dp"
         android:background="@drawable/custom_button"
-        android:onClick="vyes2"
+        android:onClick="vyes6"
         android:text="Yes"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -35,12 +35,15 @@
         android:layout_width="200dp"
         android:layout_height="100dp"
         android:layout_marginBottom="292dp"
+        android:background="@drawable/custom_button"
+        android:onClick="vno6"
         android:text="No"
         android:textSize="30sp"
-        android:background="@drawable/custom_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button6"
+        tools:ignore="OnClick" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
