--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -31,7 +31,7 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context="com.example.priyanka.mapsdemo.MapsActivity"
+        tools:context=".MapsActivity"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_below="@+id/B_hopistals" />
@@ -43,6 +43,8 @@
         android:layout_below="@+id/TF_location"
         android:layout_marginTop="3dp"
         android:onClick="onClick"
+        android:background="@drawable/button2"
+        android:textSize="20sp"
         android:text="Search Nearby Hospitals" />
 
 </RelativeLayout>
