--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
     <Button
         android:layout_width="300dp"
         android:layout_height="80dp"
+        android:layout_marginStart="72dp"
         android:layout_marginTop="90dp"
         android:layout_marginEnd="68dp"
         android:background="@drawable/button2"
@@ -19,12 +20,14 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.374" />
 
     <Button
         android:layout_width="300dp"
         android:layout_height="80dp"
+        android:layout_marginStart="72dp"
         android:layout_marginTop="250dp"
         android:layout_marginEnd="68dp"
         android:background="@drawable/button2"
@@ -33,6 +36,7 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.598" />
 
@@ -40,13 +44,15 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="46dp"
         android:layout_marginTop="140dp"
         android:layout_marginEnd="44dp"
         android:text="who are you?"
         android:textAllCaps="true"
-        android:textSize="50sp"
         android:textColor="@android:color/white"
+        android:textSize="50sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
