--- a/app/src/main/res/layout/activity_victim.xml
+++ b/app/src/main/res/layout/activity_victim.xml
@@ -48,5 +48,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button7"
         tools:ignore="OnClick" />
+    <ImageView
+        android:layout_width="70dp"
+        android:id="@+id/spk"
+        android:layout_height="70dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:onClick="speak"
+        android:src="@drawable/mic"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        android:scaleType="fitCenter"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.892" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
