--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,15 +41,26 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.598" />
 
+    <Button
+        android:layout_width="160dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="628dp"
+        android:text="@string/change_language"
+        android:onClick="changelang"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/who"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="46dp"
         android:layout_marginTop="140dp"
         android:layout_marginEnd="44dp"
         android:layout_marginBottom="131dp"
-        android:text="who are you?"
+        android:text="@string/who_are_you"
         android:textAllCaps="true"
         android:textColor="@android:color/white"
         android:textSize="50sp"
