--- a/app/src/main/res/layout/activity_screen6.xml
+++ b/app/src/main/res/layout/activity_screen6.xml
@@ -11,7 +11,7 @@
         android:layout_height="100dp"
         android:layout_marginTop="56dp"
         android:gravity="center_horizontal"
-        android:text="Is Patient Disoriented?"
+        android:text="@string/is_patient_disoriented"
         android:textSize="40dp"
         android:textColor="@android:color/black"
         android:textAllCaps="true"
@@ -23,7 +23,7 @@
         android:layout_height="100dp"
         android:background="@drawable/custom_button"
         android:onClick="yes6"
-        android:text="Yes"
+        android:text="@string/yes"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,7 @@
         android:layout_marginBottom="292dp"
         android:background="@drawable/custom_button"
         android:onClick="no6"
-        android:text="No"
+        android:text="@string/no"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
