--- a/app/src/main/res/layout/activity_final_f.xml
+++ b/app/src/main/res/layout/activity_final_f.xml
@@ -12,7 +12,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="50dp"
         android:gravity="center_horizontal"
-        android:text="Criticality 1"
+        android:text="@string/criticality_1"
         android:textSize="30dp" />
 
     <TextView
@@ -21,7 +21,7 @@
         android:layout_marginBottom="540dp"
         android:layout_marginTop="200dp"
         android:gravity="center_horizontal"
-        android:text="Refer here for immediate help"
+        android:text="@string/refer_here_for_immediate_help"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,7 +31,7 @@
         android:layout_width="200dp"
         android:layout_height="100dp"
         android:onClick="navigate"
-        android:text="Navigate"
+        android:text="@string/navigate"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
