--- a/app/src/main/res/layout/activity_fire.xml
+++ b/app/src/main/res/layout/activity_fire.xml
@@ -13,7 +13,7 @@
         android:layout_height="100dp"
         android:layout_marginTop="56dp"
         android:gravity="center_horizontal"
-        android:text="Is It Life Threatening?"
+        android:text="@string/is_it_life_threatening"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
         android:textSize="40sp"
@@ -26,7 +26,7 @@
         android:layout_height="100dp"
         android:background="@drawable/custom_button"
         android:onClick="yes1"
-        android:text="Yes"
+        android:text="@string/yes"
         android:textColor="@android:color/black"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -40,7 +40,7 @@
         android:layout_height="100dp"
         android:background="@drawable/custom_button"
         android:onClick="no1"
-        android:text="No"
+        android:text="@string/no"
         android:textColor="@android:color/black"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
