--- a/app/src/main/res/layout/activity_screen4.xml
+++ b/app/src/main/res/layout/activity_screen4.xml
@@ -13,7 +13,7 @@
         android:layout_height="100dp"
         android:layout_marginTop="56dp"
         android:gravity="center_horizontal"
-        android:text="is the person bleeding?"
+        android:text="@string/is_the_person_bleeding"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
         android:textSize="40dp"
@@ -25,7 +25,7 @@
         android:layout_height="100dp"
         android:background="@drawable/custom_button"
         android:onClick="yes4"
-        android:text="Yes"
+        android:text="@string/yes"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,7 +39,7 @@
         android:layout_marginBottom="292dp"
         android:background="@drawable/custom_button"
         android:onClick="no4"
-        android:text="No"
+        android:text="@string/no"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
