--- a/app/src/main/res/layout/activity_victim.xml
+++ b/app/src/main/res/layout/activity_victim.xml
@@ -11,7 +11,7 @@
         android:layout_height="100dp"
         android:layout_marginTop="56dp"
         android:gravity="center_horizontal"
-        android:text="Is It Life Threatening?"
+        android:text="@string/is_it_life_threatening"
         android:textSize="40sp"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
@@ -24,7 +24,7 @@
         android:layout_height="100dp"
         android:background="@drawable/custom_button"
         android:onClick="vyes1"
-        android:text="Yes"
+        android:text="@string/yes"
         android:textColor="@android:color/white"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -39,7 +39,7 @@
         android:layout_marginBottom="292dp"
         android:background="@drawable/custom_button"
         android:onClick="vno1"
-        android:text="No"
+        android:text="@string/no"
         android:textColor="@android:color/white"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
