--- a/app/src/main/res/layout/activity_victim_2.xml
+++ b/app/src/main/res/layout/activity_victim_2.xml
@@ -11,7 +11,7 @@
         android:layout_height="100dp"
         android:layout_marginTop="56dp"
         android:gravity="center_horizontal"
-        android:text="Is the Patient Conscious?"
+        android:text="@string/is_the_patient_conscious"
         android:textSize="40dp"
         android:textColor="@android:color/black"
         android:textAllCaps="true"
@@ -23,7 +23,7 @@
         android:layout_height="100dp"
         android:background="@drawable/custom_button"
         android:onClick="vyes2"
-        android:text="Yes"
+        android:text="@string/yes"
         android:textSize="30sp"
         android:textColor="#000"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -36,7 +36,7 @@
         android:layout_width="200dp"
         android:layout_height="100dp"
         android:layout_marginBottom="292dp"
-        android:text="No"
+        android:text="@string/no"
         android:onClick="vno2"
         android:textSize="30sp"
         android:textColor="#000"
