--- a/app/src/main/res/layout/activity_victim_3.xml
+++ b/app/src/main/res/layout/activity_victim_3.xml
@@ -11,7 +11,7 @@
         android:layout_height="100dp"
         android:layout_marginTop="56dp"
         android:gravity="center_horizontal"
-        android:text="Can The Person Talk?"
+        android:text="@string/can_the_person_talk"
         android:textSize="40dp"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
@@ -23,7 +23,7 @@
         android:layout_height="100dp"
         android:background="@drawable/custom_button"
         android:onClick="vyes3"
-        android:text="Yes"
+        android:text="@string/yes"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,7 +36,7 @@
         android:layout_height="100dp"
         android:layout_marginBottom="292dp"
         android:background="@drawable/custom_button"
-        android:text="No"
+        android:text="@string/no"
         android:onClick="vno3"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
