--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginBottom="21dp"
         android:gravity="center_horizontal"
-        android:text="Criticality 1"
+        android:text="@string/criticality_1"
         android:textSize="30dp"
         app:layout_constraintBottom_toTopOf="@+id/button13"
         app:layout_constraintEnd_toEndOf="parent"
