--- a/app/src/main/res/layout/activity_general_citizen.xml
+++ b/app/src/main/res/layout/activity_general_citizen.xml
@@ -51,6 +51,7 @@
         android:text="unconciousness"
         android:textAllCaps="true"
         android:textSize="15sp"
+        android:onClick="uncon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,6 +67,7 @@
         android:layout_marginBottom="305dp"
         android:background="@drawable/button2"
         android:text="breathlessness"
+        android:onClick="breath"
         android:textAllCaps="true"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
