--- a/app/src/main/res/layout/activity_final_f2.xml
+++ b/app/src/main/res/layout/activity_final_f2.xml
@@ -25,5 +25,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:onClick="navigate"
+        android:text="@string/navigate"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
