--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -40,7 +40,7 @@
         android:layout_width="200dp"
         android:layout_height="100dp"
         android:onClick="navigate"
-        android:text="Navigate"
+        android:text="@string/navigate"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
