--- a/app/src/main/res/layout/activity_general_citizen.xml
+++ b/app/src/main/res/layout/activity_general_citizen.xml
@@ -13,7 +13,7 @@
         android:layout_height="100dp"
         android:layout_marginTop="56dp"
         android:gravity="center_horizontal"
-        android:text="What is the patient suffering from?"
+        android:text="@string/what_is_the_patient_suffering_from"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
         android:textSize="30sp"
@@ -29,7 +29,7 @@
         android:layout_marginEnd="281dp"
         android:layout_marginBottom="486dp"
         android:background="@drawable/button2"
-        android:text="Bleeding"
+        android:text="@string/bleeding"
         android:textAllCaps="true"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -48,7 +48,7 @@
         android:layout_marginEnd="252dp"
         android:layout_marginBottom="400dp"
         android:background="@drawable/button2"
-        android:text="unconciousness"
+        android:text="@string/unconciousness"
         android:textAllCaps="true"
         android:textSize="15sp"
         android:onClick="uncon"
@@ -66,7 +66,7 @@
         android:layout_marginEnd="252dp"
         android:layout_marginBottom="305dp"
         android:background="@drawable/button2"
-        android:text="breathlessness"
+        android:text="@string/breathlessness"
         android:onClick="breath"
         android:textAllCaps="true"
         android:textSize="15sp"
@@ -84,7 +84,7 @@
         android:layout_marginEnd="252dp"
         android:layout_marginBottom="218dp"
         android:background="@drawable/button2"
-        android:text="fracture"
+        android:text="@string/fracture"
         android:textAllCaps="true"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -101,7 +101,7 @@
         android:layout_marginEnd="54dp"
         android:layout_marginBottom="486dp"
         android:background="@drawable/button2"
-        android:text="burns"
+        android:text="@string/burns"
         android:textAllCaps="true"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -118,7 +118,7 @@
         android:layout_marginEnd="54dp"
         android:layout_marginBottom="400dp"
         android:background="@drawable/button2"
-        android:text="drowning"
+        android:text="@string/drowning"
         android:textAllCaps="true"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -135,7 +135,7 @@
         android:layout_marginEnd="54dp"
         android:layout_marginBottom="305dp"
         android:background="@drawable/button2"
-        android:text="heart attack"
+        android:text="@string/heart_attack"
         android:textAllCaps="true"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -152,7 +152,7 @@
         android:layout_marginEnd="59dp"
         android:layout_marginBottom="218dp"
         android:background="@drawable/button2"
-        android:text="poisoning"
+        android:text="@string/poisoning"
         android:textAllCaps="true"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
