--- a/app/src/main/res/layout/activity_breathlessness.xml
+++ b/app/src/main/res/layout/activity_breathlessness.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="56dp"
         android:layout_marginBottom="575dp"
         android:gravity="center_horizontal"
-        android:text="if the patient is also unconscious give cpr"
+        android:text="@string/if_the_patient_is_also_breathless_give_cpr"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
         android:textSize="30sp"
