--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="68dp"
         android:background="@drawable/button2"
         android:onClick="fire"
-        android:text="Helper"
+        android:text="MEDICAL STAFF"
         android:textFontWeight="@android:integer/config_mediumAnimTime"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
