--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -14,6 +14,7 @@
         android:layout_marginBottom="21dp"
         android:gravity="center_horizontal"
         android:text="@string/criticality_1"
+        android:textAllCaps="true"
         android:textSize="30dp"
         app:layout_constraintBottom_toTopOf="@+id/button13"
         app:layout_constraintEnd_toEndOf="parent"
